<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.montanha.nme.MainActivity"
    >
    <!--BACKGROUND IMAGE-->
    <ImageView
        android:id="@+id/BackgroundImage"
        style="@style/BckgImg"
        android:src="@drawable/mountain"
        android:contentDescription="@string/BackgroundImageDesc"
        />
    <ScrollView
        android:id="@+id/GlobalScroll"
        style="@style/GlobalScroll"
        >
        <LinearLayout
            style="@style/HorMatchParent_VertWrap"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            >
            <!--LOGO AND TITLE-->
            <LinearLayout
                style="@style/HorMatchParent_VertWrap"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/Logo"
                    app:srcCompat="@drawable/nme"
                    android:contentDescription="@string/LogoDesc"
                    style="@style/LogoStyle"
                    />
                <TextView
                    android:id="@+id/TitleText"
                    android:text="@string/TitleText"
                    style="@style/LogoText"
                    />
            </LinearLayout>
            <!--DESCRIPTION-->
            <LinearLayout
                style="@style/ContainerBox"
                android:orientation="vertical"
                android:alpha="0.85"
                >
                <TextView
                    style="@style/SubTitleText"
                    android:id="@+id/presentationText1"
                    android:text="@string/PresentationText1"
                    />
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="130dp"
                        android:orientation="horizontal"
                        android:alpha="1">
                        <ImageView
                            android:id="@+id/imageView3"
                            app:srcCompat="@drawable/topas3"
                            android:contentDescription="@string/Climber"
                            style="@style/HScrollImage"
                            />
                        <ImageView
                            app:srcCompat="@drawable/climbkids"
                            android:contentDescription="@string/KidsClimbing"
                            style="@style/HScrollImage"
                            />
                        <ImageView
                            app:srcCompat="@drawable/trailrunning2"
                            android:contentDescription="@string/TrailRunning"
                            style="@style/HScrollImage"
                            />
                        <ImageView
                            app:srcCompat="@drawable/snowtrail"
                            android:contentDescription="@string/snowtrail"
                            style="@style/HScrollImage"
                            />
                        <ImageView
                            app:srcCompat="@drawable/escaladamesmo2"
                            android:contentDescription="@string/Climber2"
                            style="@style/HScrollImage"
                            />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <TextView
                android:text="@string/friendsWelcome"
                style="@style/Sticker"
                />
            <LinearLayout
                style="@style/ContainerBox"
                android:alpha="0.8">
                <TextView
                    android:id="@+id/PresentationText4"
                    android:text="@string/PresentationText4"
                    style="@style/BoxTitle"
                    />
                <LinearLayout
                    style="@style/ContainerBox"
                    android:layout_marginBottom="-10dp"
                    >
                    <LinearLayout
                        style="@style/TableRow"
                        >
                        <TextView
                            style="@style/textInTable"
                            android:text="@string/callUs"
                            />
                        <TextView
                            style="@style/SecondColumn"
                            android:text="@string/telephonenumber"
                            android:id="@+id/telephonenumber"/>
                        <ImageView
                            android:contentDescription="@string/PhoneIcon"
                            app:srcCompat="@drawable/btn_poi_detail_phone"
                            style="@style/btnInTable"
                            android:id="@+id/CallTo"
                            />
                            <!--android:onClick="openBrowser"-->
                    </LinearLayout>
                    <LinearLayout
                        style="@style/TableRow"
                        >
                        <TextView
                            style="@style/textInTable"
                            android:text="@string/emailUs"
                            />
                        <TextView
                            style="@style/SecondColumn"
                            android:text="@string/email"
                            />
                        <ImageView
                            android:contentDescription="@string/AtIcon"
                            app:srcCompat="@drawable/btn_poi_detail_email"
                            style="@style/btnInTable"
                            android:id="@+id/mail"
                            />
                    </LinearLayout>
                    <LinearLayout
                        style="@style/TableRow"
                        >
                        <TextView
                            style="@style/textInTable"
                            android:text="@string/FindUs"
                            />
                        <TextView
                            style="@style/SecondColumn"
                            android:text="@string/address"
                            android:id="@+id/textView" />
                        <ImageView
                            android:contentDescription="@string/PinRoutIcon"
                            app:srcCompat="@drawable/btn_poi_detail_directions"
                            style="@style/btnInTable"
                            android:id="@+id/Map"
                            android:tag="https://goo.gl/maps/U3GpGqUp3Kq"
                            android:onClick="openBrowser"
                            />
                    </LinearLayout>
                    <LinearLayout
                        style="@style/TableRow"
                        >
                        <TextView
                            style="@style/textInTable"
                            android:text="@string/OpeningHours"
                            />
                        <TextView
                            style="@style/SecondColumn"
                            android:text="@string/openfromto"
                            android:id="@+id/textView2" />

                        <TextView
                            style="@style/btnInTable"
                            android:id="@+id/OpeningHours"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/ContainerBox"
                android:alpha="0.85">
                <TextView
                    style="@style/BoxTitle"
                    android:id="@+id/presentationText3"
                    android:text="@string/PresentationText3"
                    />
                <LinearLayout
                    style="@style/SocialIconsTable"
                    >
                    <ImageView
                        android:contentDescription="@string/WebPageLinkIcon"
                        app:srcCompat="@drawable/www_logo_social_media"
                        android:tag="http://www.montanha.org"
                        style="@style/SocialIcons"
                        />
                    <ImageView
                        android:contentDescription="@string/FacebookLinkIcon"
                        app:srcCompat="@drawable/facebook_online_social_media"
                        android:tag="https://www.facebook.com/nmespinho/"
                        style="@style/SocialIcons"
                        />
                    <ImageView
                        android:contentDescription="@string/TwitterLinkIcon"
                        app:srcCompat="@drawable/social_media_twitter"
                        android:tag="http://twitter.com/#!/nucleomontanha"
                        style="@style/SocialIcons"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
